# smt_pickup_fw

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  main.c  router.c  router.h  system_events.c  system_events.h  translator.c  translator.h
main/handlers/: button_handler.c  button_handler.h  debug_handler.c  debug_handler.h  pedal_handler.c  pedal_handler.h
main/hardware/: board.h  buttons.c  buttons.h  hardware_task.c  hardware_task.h  pedal.c  pedal.h  pump.c  pump.h  regulator.c  regulator.h  valve.c  valve.h
